<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_settings_images"
        android:persistent="false"
        android:title="@string/settings_images" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="key_rotate_images"
            android:summary="@string/settings_rotate_summary"
            android:title="@string/settings_rotate_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="key_crop_images"
            android:summary="@string/settings_crop_summary"
            android:title="@string/settings_crop_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_settings_system"
        android:persistent="false"
        android:title="@string/settings_system" >
        <Preference
            android:key="key_reset"
            android:summary="@string/settings_reset_summary"
            android:title="@string/settings_reset_title" />
        <Preference
            android:key="key_reload"
            android:summary="@string/settings_reload_summary"
            android:title="@string/settings_reload_title" />
        <Preference
            android:key="key_delete"
            android:summary="@string/settings_delete_summary"
            android:title="@string/settings_delete_title" />
    </PreferenceCategory>

</PreferenceScreen>